navbar included also font awesome cdn lib for icons and such

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,6 +1,18 @@
 <% include partials/header %>
 
-<h1>Welcome to the landing page.</h1>
+<div class="container">
+    <div class="jumbotron">
+        <h1>SEKAIROSHI</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore dolorem ducimus maiores repellat saepe
+            ullam.
+            Assumenda blanditiis cupiditate debitis excepturi explicabo ipsum perspiciatis, repellendus sed sequi sunt
+            tempora tenetur veritatis.</p>
+        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+    </div>
+</div>
+
+
+
 
 
 <% include partials/footer %>
