added footer with socials

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,16 @@
-
-<h5>Footer</h5>
+<!--FOOTER-->
+<nav class="navbar navbar-inverse navbar-fixed-bottom">
+    <div class="container-fluid">
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+                <!-- ADD THE CORRECT LINKS TO THE a's-->
+                <li><a href="http://www.facebook.com"><i class="fab fa-facebook fa-lg"></i> </a></li>
+                <li><a href="http://www.instagram.com"><i class="fab fa-instagram fa-lg"></i> </a></li>
+                <li><a href="http://www.twitter.com"><i class="fab fa-twitter-square fa-lg"></i> </a></li>
+                <li><a href="https://github.com/RoninCorp/SekaiRoshi"><i class="fab fa-github-square fa-lg"></i> </a></li>
+            </ul>
+        </div><!-- /.navbar-collapse -->
+    </div>
+</nav>
 </body>
 </html>
