--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -2,13 +2,53 @@
 
 <div class="container">
     <div class="jumbotron">
-        <h1>SEKAIROSHI</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore dolorem ducimus maiores repellat saepe
-            ullam.
-            Assumenda blanditiis cupiditate debitis excepturi explicabo ipsum perspiciatis, repellendus sed sequi sunt
-            tempora tenetur veritatis.</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+        <div class="page-header">
+            <h1>Sekairoshi <br>
+                <small>This is a beta web application based on an idea that came in a second's flash.</small>
+            </h1>
+        </div>
+        <p>
+            A social media for all your social media. <br>
+            Control your social medias through this app <br>
+            Watch any updates on any social media from other users you follow!
+        </p>
+
+        <p><a class="btn btn-primary btn-lg" href="https://github.com/RoninCorp/SekaiRoshi" role="button">Learn more</a>
+            <a class="btn btn-primary btn-lg"  target="_blank" href="https://en.wikipedia.org/wiki/Forty-seven_r%C5%8Dnin" role="button">About
+                the influence </a>
+        </p>
     </div>
 </div>
+<div class="container">
+    <div class="container">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa laudantium nobis possimus. Doloremque
+            explicabo
+            illo maxime nam quod ratione repellendus. Cumque doloremque dolorum, eligendi esse laboriosam magnam nihil
+            ratione reiciendis.</p>
 
+    </div>
+    <div class="container">
+        <h3>POWERED BY LOREM IPSUM</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa laudantium nobis possimus. Doloremque
+            explicabo
+            illo maxime nam quod ratione repellendus. Cumque doloremque dolorum, eligendi esse laboriosam magnam nihil
+            ratione reiciendis.</p>
+        <h4>Another Header</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure nostrum quam rerum veniam. Atque enim et,
+            fuga,
+            harum illo ipsam iusto libero molestias, nisi nobis nostrum perferendis repudiandae similique velit!</p>
+    </div>
+
+    <div class="container">
+        <h3>Another Header</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa laudantium nobis possimus. Doloremque
+            explicabo
+            illo maxime nam quod ratione repellendus. Cumque doloremque dolorum, eligendi esse laboriosam magnam nihil
+            ratione reiciendis.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt eius facere fugiat ipsa ipsum minus
+            placeat
+            quos! Aspernatur deserunt dolores doloribus eaque, eos quibusdam quis quisquam, quos sequi tempore
+            veniam!</p>
+    </div>
+</div>
 <% include partials/footer %>
