--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,15 +22,15 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#"><i class="fas fa-globe-americas"></i> SekaiRoshi</a>
+            <a class="navbar-brand" href="/landing"><i class="fas fa-globe-americas"></i> SekaiRoshi</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <!-- ADD THE CORRECT LINKS TO THE a's-->
-                <li><a href="#"><i class="fas fa-user"></i> Login</a></li>
-                <li><a href="#"><i class="fas fa-user-plus"></i> Register</a></li>
+                <li><a href="/login"><i class="fas fa-user"></i> Login</a></li>
+                <li><a href="/register"><i class="fas fa-user-plus"></i> Register</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
